--- a/eme-observer/datasubmission-o.html
+++ b/eme-observer/datasubmission-o.html
@@ -317,11 +317,7 @@
         
         <h2>144&nbsp;MHz</h2>
         <p>
-        <p>
-            For stations operating on <strong>144&nbsp;MHz</strong>, send station updates
-            to Erwin <strong><a href="mailto:emeobserver@mailbox.org ">DK5EW - click to email</a></strong>
-            or see his <a href="https://www.qrz.com/db/DK5EW" target="_blank">QRZ.com profile</a>.
-        </p>
+            Currently there is no station database for 144MHz. If you would like to commit to creating and maintaining one for the EME community, let us know. 
         </p>
 
         <h2>Station Pictures</h2>
