--- a/eme-observer/datasubmission copy.html
+++ b/eme-observer/datasubmission copy.html
@@ -300,70 +300,37 @@
         </p>
 
         <h2>432&nbsp;MHz and Above</h2>
-            <p>
-                For stations operating on <strong>432&nbsp;MHz and higher bands</strong> (except 902&nbsp;MHz),
-                submit station details to the EME Directory maintained by Jan
-                <strong>
-                    <a href="#"
-                       class="email-link"
-                       data-email="ln.ylp0ap@ofni">
-                       PA0PLY – click to email
-                    </a>
-                </strong>:
-                <a href="https://www.pa0ply.nl/eme-directory/" target="_blank">
-                    https://www.pa0ply.nl/eme-directory/
-                </a>
-            </p>
+        <p>
+            For stations operating on <strong>432&nbsp;MHz and higher bands</strong> (except 902MHz), submit station
+            details to the EME Directory maintained by Jan <strong><a href="mailto:info@pa0ply.nl">PA0PLY</a></strong>:
+            <a href="https://www.pa0ply.nl/eme-directory/" target="_blank">
+                https://www.pa0ply.nl/eme-directory/
+            </a>
+        </p>
 
-            <h2>222&nbsp;MHz and 902&nbsp;MHz</h2>
-            <p>
-                For stations operating on <strong>222&nbsp;MHz</strong> and <strong>902&nbsp;MHz</strong>,
-                send station updates to Martin
-                <strong>
-                    <a href="#"
-                       class="email-link"
-                       data-email="ln.mm4jp@nitr am">
-                       PJ4MM – click to email
-                    </a>
-                </strong>
-                -
-                <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>.
-            </p>
+        <h2>222&nbsp;MHz and 902&nbsp;MHz</h2>
+        <p>
+            For stations operating on <strong>222&nbsp;MHz</strong> and <strong>902&nbsp;MHz</strong>, send station updates
+            to Martin <strong><a href="mailto:martin@pj4mm.nl">PJ4MM - click to email</a></strong>
+            or see his <a href="https://www.qrz.com/db/PJ4MM" target="_blank">QRZ.com profile</a>. Feel free to submit station pictures for these two bands to Martin too.
+        </p>
+        
+        <h2>144&nbsp;MHz</h2>
+        <p>
+        <p>
+            For stations operating on <strong>144&nbsp;MHz</strong>, send station updates
+            to Erwin <strong><a href="mailto:emeobserver@mailbox.org ">DK5EW - click to email</a></strong>
+            or see his <a href="https://www.qrz.com/db/DK5EW" target="_blank">QRZ.com profile</a>. <p>We gratefully acknowledge the support of <a href="https://www.mmmonvhf.de/" target="_blank">MMMonVHF</a> for providing the initial database.</p>
+        </p>
 
-            <h2>144&nbsp;MHz</h2>
-            <p>
-                For stations operating on <strong>144&nbsp;MHz</strong>,
-                send station updates to Erwin
-                <strong>
-                    <a href="#"
-                       class="email-link"
-                       data-email="gro.xobliam@revresboeme">
-                       DK5EW – click to email
-                    </a>
-                </strong>
-                -
-                <a href="https://www.qrz.com/db/DK5EW" target="_blank">QRZ.com profile</a>.
-            </p>
-
-            <p>
-                We gratefully acknowledge the support of
-                <a href="https://www.mmmonvhf.de/" target="_blank">MMMonVHF</a>
-                for providing the initial database.
-            </p>
-
-            <h2>Station Pictures</h2>
-            <p>
-                Send station pictures to Max
-                <strong>
-                    <a href="#"
-                       class="email-link"
-                       data-email="moc.oohay@ykysnemor.sykam">
-                       SA5IKN – click to email
-                    </a>
-                </strong>
-                -
-                <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>.
-            </p>
+        <h2>Station Pictures</h2>
+        <p>
+            To include a station picture in the EME Observer station profiles, send the image
+            to Max <strong><a href="mailto:maksym.romensky@yahoo.com">SA5IKN - click to email</a></strong> or see his
+            <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>.
+            Please specify which band the picture applies to. Each band may use its own picture,
+            or a single picture may be used for all bands.
+        </p>
 
         <img src="images/station-profile.jpg"
              alt="EME Observer Station Profile Example"
@@ -373,29 +340,7 @@
             Example of an EME Observer station profile with a picture.
         </p>
     </div>
-    
-    <script>
-    (function () {
-      function reverseString(str) {
-        return str.split('').reverse().join('');
-      }
 
-      document.querySelectorAll('.email-link').forEach(link => {
-        link.addEventListener('click', function (e) {
-          e.preventDefault();
-
-          const reversed = this.dataset.email;
-          if (!reversed) return;
-
-          const email = reverseString(reversed);
-          window.location.href = 'mailto:' + email;
-        });
-      });
-    })();
-    </script>
-
-    </body>
-    </html>
 
     <!-- Ko-Fi -->
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
