--- a/eme-observer/datasubmission.html
+++ b/eme-observer/datasubmission.html
@@ -343,12 +343,9 @@
                 </strong>
                 -
                 <a href="https://www.qrz.com/db/DK5EW" target="_blank">QRZ.com profile</a>.
-            </p>
-
-            <p>
                 We gratefully acknowledge the support of
                 <a href="https://www.mmmonvhf.de/" target="_blank">MMMonVHF</a>
-                for providing the initial database.
+                for providing the initial 144MHz database.
             </p>
 
             <h2>Station Pictures</h2>
@@ -362,7 +359,7 @@
                     </a>
                 </strong>
                 -
-                <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>.
+                <a href="https://www.qrz.com/db/SA5IKN" target="_blank">QRZ.com profile</a>. Please specify the band for which the image is intended. Each band may use a dedicated image, or the same image may be applied across all bands.
             </p>
 
         <img src="images/station-profile.jpg"
