--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -374,7 +374,7 @@
       <h2>About EME Observer</h2>
       <p>
         <strong>EME Observer</strong> is a web application that provides an interactive map of Earth-Moon-Earth (EME) stations and enables one-click sked planning and real-time tracking of moon footprint and conditions. It delivers high-resolution lunar ephemeris data and displays key signal-path characteristics, including additional path loss, libration rate, Doppler spread, and polarization offset, together with station profiles and statistical summaries.
-        EME Observer supports all EME bands from 144&nbsp;MHz to 76GHz. Note that station profiles are currently not available for 144MHz.
+        EME Observer supports all EME bands from 144&nbsp;MHz to 76GHz.
       </p>
 
       <figure style="margin-top: 10px; text-align: center;">
