--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -374,7 +374,7 @@
       <h2>About EME Observer</h2>
       <p>
         <strong>EME Observer</strong> is a web application that provides an interactive map of Earth-Moon-Earth (EME) stations and enables one-click sked planning and real-time tracking of moon footprint and conditions. It delivers high-resolution lunar ephemeris data and displays key signal-path characteristics, including additional path loss, libration rate, Doppler spread, and polarization offset, together with station profiles and statistical summaries.
-        EME Observer supports all EME bands from 144&nbsp;MHz to 76GHz.
+        EME Observer supports all EME bands from 144&nbsp;MHz to 76 GHz.
       </p>
 
       <figure style="margin-top: 10px; text-align: center;">
@@ -428,7 +428,7 @@
       
       <h3 id="station-data">Station Data</h3>
       <p>
-        Station data is contributed by the community. The 432&nbsp;MHz and above database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations. The databases for 222&nbsp;MHz and 902&nbsp;MHz, bands that are almost entirely specific to ITU Region&nbsp;2, are maintained by Martin PJ4MM.
+        Station data is contributed by the community. The 432&nbsp;MHz and above database builds upon the excellent and dedicated work of Jan PA0PLY, who maintains a comprehensive list of active EME stations. The databases for 222&nbsp;MHz and 902&nbsp;MHz, bands that are almost entirely specific to ITU Region&nbsp;2, are maintained by Martin PJ4MM. The 144 MHz database is maintained by Erwin DK5EW.
         </p>
         <p>
             For stations operating on <strong>432&nbsp;MHz and higher bands</strong> (except 902&nbsp;MHz),
