--- a/eme-observer/index.html
+++ b/eme-observer/index.html
@@ -11,18 +11,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
             <title id="pageTitle">EME Observer - EME Station Map & EME QSO Planner</title>
-                <meta name="description" id="metaDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked." />
-                <meta name="keywords" content="EME, Moonbounce, Ham Radio, Amateur Radio, 10GHz, DX Map, Moon Tracking, Doppler Spread, Polarization Offset, Sublunar Point, Moon Azimuth, Moon Declination, Signal Loss, Libration, Moon Footprint, Moon Elevation" />
+                <meta name="description" id="metaDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner for all EME bands, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked." />
+                <meta name="keywords" content="EME, Moonbounce, Ham Radio, Amateur Radio, DX Map, Moon Tracking, Doppler Spread, Polarization Offset, Sublunar Point, Moon Azimuth, Moon Declination, Signal Loss, Libration, Moon Footprint, Moon Elevation" />
                 <meta name="author" content="SA5IKN">
                     <meta name="robots" content="index, follow">
                         <meta property="og:title" id="ogTitle" content="EME Observer - EME Station Map & EME QSO Planner">
                             <meta property="og:type" content="website">
-                                <meta property="og:description" id="ogDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked.">
+                                <meta property="og:description" id="ogDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner for all EME bands, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked.">
                                     <meta property="og:image" content="https://dxer.site/social/eme-observer.jpg">
                                         <meta property="og:url" content="https://dxer.site/eme-observer/">
                                             <meta name="twitter:card" content="summary_large_image">
                                                 <meta name="twitter:title" id="twitterTitle" content="EME Observer - EME Station Map & EME QSO Planner" />
-                                                <meta name="twitter:description" id="twitterDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked." />
+                                                <meta name="twitter:description" id="twitterDescription" content="EME Observer is an Earth-Moon-Earth station map and QSO planner for all EME bands, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked." />
                                                 <meta name="twitter:image" content="https://dxer.site/social/eme-observer.jpg" />
                                                 <link rel="canonical" href="https://dxer.site/eme-observer/" />
                                                 <!-- Favicon and App Icons -->
@@ -41,7 +41,7 @@
                                                                                 "@type": "Person",
                                                                                 "name": "SA5IKN"
                                                                             },
-                                                                            "description": "EME Observer is an Earth-Moon-Earth station map and QSO planner, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked.",
+                                                                            "description": "EME Observer is an Earth-Moon-Earth station map and QSO planner for all EME bands, offering realtime moon tracking, lunar ephemeris, Dpol, libration rate, and path loss charts to plan your sked.",
                                                                             "applicationCategory": "Science",
                                                                             "operatingSystem": "All",
                                                                             "browserRequirements": "Requires JavaScript",
