--- a/eme-observer/table.html
+++ b/eme-observer/table.html
@@ -12,7 +12,7 @@
     <title>EME Observer – Table View | Moonbounce Stations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <meta name="description" content="Table view of active Moonbounce (EME) stations across multiple bands with locator, DX data, and activity status. Part of the EME Observer tool for amateur radio." />
+    <meta name="description" content="Table view of active EME stations across all EME bands with locator, DX data, and activity status. Part of the EME Observer tool for amateur radio." />
     <meta name="keywords" content="EME, Moonbounce, Ham Radio, DX Table, Amateur Radio, Station Locator, Moonbounce Table" />
     <meta name="author" content="SA5IKN" />
     <meta name="robots" content="index, follow" />
@@ -47,7 +47,7 @@
       "@type": "WebPage",
       "name": "EME Observer – Table View",
       "url": "https://dxer.site/eme-observer/table.html",
-      "description": "Table listing of active Moonbounce (EME) stations across multiple bands, including locator, DX info, and sked data for ham radio enthusiasts.",
+      "description": "Table view of active EME stations across all EME bands with locator, DX data, and activity status. Part of the EME Observer tool for amateur radio.",
       "inLanguage": "en",
       "author": {
         "@type": "Person",
