--- a/eme-observer/user-guide.html
+++ b/eme-observer/user-guide.html
@@ -13,7 +13,7 @@
     <title>EME Observer – User Guide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         
-        <meta name="description" content="Learn how to use the EME Observer tool to plan Moonbounce QSOs on all bands from 144MHz and above. This user guide covers features like moon tracking, Dpol, elevation charts, and station tables." />
+        <meta name="description" content="Learn how to use the EME Observer to plan EME QSOs on all bands from 144MHz and above. This user guide covers features like moon tracking, common moon windows, Dpol, elevation charts, and station tables." />
         <meta name="keywords" content="EME, Moonbounce, User Guide, Ham Radio, moon ephemeris, Polarization Offset, Signal Loss, Amateur Radio Tools" />
         <meta name="author" content="SA5IKN" />
         <meta name="robots" content="index, follow" />
