--- a/enp/noise.html
+++ b/enp/noise.html
@@ -10,7 +10,7 @@
           overflow: hidden;
           width: 100%;
           height: 100vh;
-          background: #000;
+          background: #e0e8f0;
         }
         canvas {
           display: block;
