--- a/enp/noise.html
+++ b/enp/noise.html
@@ -19,6 +19,7 @@
           left: 0;
           width: 100%;
           height: 100%;
+          background: #d8e0e8;
         }
         
         html, body {
