--- a/enp/noise.html
+++ b/enp/noise.html
@@ -10,7 +10,7 @@
           overflow: hidden;
           width: 100%;
           height: 100vh;
-          background: #e0e8f0;
+          background: #000;
         }
         canvas {
           display: block;
@@ -19,7 +19,6 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background: #d8e0e8;
         }
         
         html, body {
@@ -510,11 +509,7 @@
           const colorBarContainer = document.getElementById('colorBarContainer');
           const trackButton = document.getElementById('trackButton');
 
-          const renderer = new THREE.WebGLRenderer({
-            antialias: true,
-            alpha: true                // ← this is the key!
-          });
-            renderer.setClearColor(0x000000, 0);   // black with 0 opacity = fully transparent
+          const renderer = new THREE.WebGLRenderer({ antialias: true });
           renderer.setSize(window.innerWidth, window.innerHeight);
           document.body.appendChild(renderer.domElement);
 
