--- a/enp/noise.html
+++ b/enp/noise.html
@@ -446,24 +446,6 @@
         <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/geometries/TextGeometry.js"></script>
 
         <script>
-            // Load shared DX when page opens
-            document.addEventListener('DOMContentLoaded', () => {
-                const sharedDX = sessionStorage.getItem('emeTempDX');
-                if (sharedDX && /^[A-R]{2}[0-9]{2}[A-X]{2}$/i.test(sharedDX)) {
-                    const upper = sharedDX.toUpperCase();
-                    dxGridInput.value = upper;
-                    dxGridInput.style.borderColor = '#fff';
-
-                    // Force full update with the loaded value
-                    const dateVal = datePicker.value || new Date().toISOString().split('T')[0];
-                    addTrajectories(dateVal);
-                    if (isRealTime) {
-                        updateTracking();
-                    }
-
-                    console.log('[Noise Mapper] Loaded shared DX:', upper); // debug
-                }
-            });
           // Prevent double-tap zoom on mobile
           let lastTouchEnd = 0;
           document.addEventListener('touchstart', function(event) {
@@ -491,6 +473,33 @@
           document.addEventListener('gestureend', function(event) {
             event.preventDefault();
           }, false);
+            
+            // Super-safe shared DX loader
+            function loadSharedDX() {
+                const sharedDX = sessionStorage.getItem('emeTempDX');
+                if (sharedDX && /^[A-R]{2}[0-9]{2}[A-X]{2}$/i.test(sharedDX)) {
+                    const upper = sharedDX.toUpperCase();
+                    dxGridInput.value = upper;
+                    dxGridInput.style.borderColor = '#fff';
+
+                    const dateVal = datePicker.value || new Date().toISOString().split('T')[0];
+                    addTrajectories(dateVal);
+                    if (isRealTime) {
+                        updateTracking();
+                    }
+
+                    console.log('[Noise Mapper] Loaded shared DX:', upper);
+                } else {
+                    console.log('[Noise Mapper] No valid shared DX found');
+                }
+            }
+
+            // Run immediately (if DOM already ready) + listen for the event
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', loadSharedDX);
+            } else {
+                loadSharedDX(); // DOM is already loaded → run now
+            }
 
           const scene = new THREE.Scene();
           const moonTrajectoryGroup = new THREE.Group();
